--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "x-express-session",
   "version": "1.20.1",
-  "description": "Simple session middleware for Express",
-  "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
+  "description": "Fork of express-session with header option included",
+  "author": "express-session: TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
   "contributors": [
-    "Douglas Christopher Wilson <doug@somethingdoug.com>",
-    "Joe Wagner <njwjs722@gmail.com>",
-    "BlueMagnificent"
+    "express-session: Douglas Christopher Wilson <doug@somethingdoug.com>",
+    "express-session: Joe Wagner <njwjs722@gmail.com>",
+    "x-express-session: BlueMagnificent"
   ],
-  "repository": "x-express-session",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BlueMagnificent/x-express-session.git"
+  },
+  "homepage": "https://github.com/BlueMagnificent/x-express-session",
   "license": "MIT",
   "dependencies": {
     "cookie": "0.3.1",
